# fate-core-remote-table

./: .containerIgnore  .gitignore  Containerfile  Dockerfile  README.md  package-lock.json  package.json  pom.xml  tailwind.config.js
.github/workflows/: cd.yml  ci.yml  dev.yml  master.yml
app/: index.html  package-lock.json  package.json  pom.xml  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.js  webpack.config.js
app/public/messages/: de.json  default.json
app/src/: index.css  index.ts
app/src/api/: index.ts
app/src/control/: index.ts
app/src/models/: index.ts
app/src/script/: index.ts
app/src/styles/: index.css
app/src/views/: index.ts
backend/: .gitignore  go.mod  go.sum  main.go  test.http
backend/apitests/: apitests_test.go  client_gen_test.go
backend/apitests/httpresponsewith/: httpresponsewith.go
backend/internal/: run.go
backend/internal/auth/: auth.go
backend/internal/boundary/: oapi-codegen.config.yaml  rest.go  rest_gen.go  web.go
backend/internal/control/: controller.go  controller_test.go
backend/internal/domain/: domain.go
backend/internal/id/: id.go  id_test.go
backend/internal/ingress/: ingress.go
backend/internal/persistence/: inmemory.go  inmemory_test.go
docs/: api.yaml  entities.puml  fate-core-remote-table.asyncapi.yml  specs.asyncapi.yml  sysarch.puml
e2e-tests/: .gitignore  docker-compose.yaml  pyproject.toml  test_acceptance.py
e2e-tests/fatetable/: pagemodel.py
public/: manifest.json
public/messages/: default.json
service/: README.md  pom.xml
src/script/: index.ts
(+130 files in other folders)
