[tool.poetry]
name = "fate-table-e2e-tests"
version = "0.1.0"
description = "UI end-to-end tests for Fate Table"
authors = ["Alexander Metzner <alexander.metzner@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest-playwright = "^0.4.4"
pytest = "^8.1.1"
playwright = "^1.43.0"

[tool.pytest.ini_options]
base_url = "http://localhost:8080"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
